2004-07-21  Stefan Jahn  <stefan@lkcc.org>

	* spfile.h (class spfile): New class representing a S-parameter
	file (e.g. touchstone) component.  During S-parameter simulation
	the values stored in the file are interpolated if necessary.

2004-07-18  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/msline.cpp: Fixed strip thickness effect
	formulas by Hammerstad and Jensen.

2004-07-12  Stefan Jahn  <stefan@lkcc.org>

	* constants.h (quadr): Renamed quad() to quadr() to avoid
	name clash with some platforms defining quad as data type.

2004-07-11  Stefan Jahn  <stefan@lkcc.org>

	* devices/diode.cpp: Simplified computation of S-parameters.
	Code cleanups using the new helper functionality in device
	class.

	* devices/device.cpp: Removed applyResistance() function.
	Now using a real resistor circuit for additional external
	resistances of non-linear devices.  Changed all callers.
	New functions splitCapacitance() and disableCapacitance()
	which can be used to add an additional capacitance to the
	netlist.
	(pnCriticalVoltage): New function calculating the critical
	voltage of a pn-junction (often used in DC analysis).

	* devices/bjt.cpp: Partly implemented the small signal
	model.  Needs some testing...

	* resistor.cpp (calcDC): Also compute the MNA matrix
	entries in calcDC().  This is useful if a resistor circuits
	resistance is controlled by another circuit.

	* capacitor.cpp: Using admittance to for the S-parameter
	matrix instead the impedance.

2004-07-10  Stefan Jahn  <stefan@lkcc.org>

	* devices/device.cpp: Made all public functions 'friend'.
	Added pnCurrent(), pnConductance() and pnCapacitance()
	functionality because this is used very often in non-linear
	devices.  Changed all callers of new 'friend' functions.

	* devices/bjt.cpp: Corrected DC model of SGP BJT device.  
	Approved that the implemented model is equivalent to the
	Spice model.  Interpreting zero as infinity for those
	model parameters having an infinity default.  Setting up