@@ -1,5 +1,8 @@
 2004-07-21  Stefan Jahn  <stefan@lkcc.org>
 
+	* spfile.cpp (interpolate_lin): Renamed 'rect' into
+	'rectangular' for the 'Data' property.
+
 	* spfile.h (class spfile): New class representing a S-parameter
 	file (e.g. touchstone) component.  During S-parameter simulation
 	the values stored in the file are interpolated if necessary.
